frontend/src/components/articles/article.scss
.article-compose-container {
    display: flex;
    padding: 0 20px;
    margin: 0 auto;
    width: 100%;
    margin-top: 20px;
    overflow: hidden;
}

.article-display {
    // max-width: 740px;
    padding: 0 20px;
    width: 100%;
    margin: 20px auto;
}
.article-edit {
    position: relative;
    padding: 0 20px 75px 20px;
    width: 100%;
    margin: 20px auto;
}

.article-display-title {
    font-size: 40px;
    margin-bottom: 25px;
}

.article-display-meta {
    height: 55px;
    margin-bottom: 70px;
    display: grid;
    grid-template-columns: 55px auto;
    grid-template-rows: 1fr 1fr;
}

.article-display-meta img {
    width: 55px;
    height: 55px;
    border-radius: 50%;
}

.article-display-meta-image-link {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 3;
}

.article-display-meta-top {
    margin-left: 8px;
    margin-top: 5px;
    grid-column-start: 2;
    grid-row-start: 1;
    grid-row-end: 2;
    display: flex;
    align-items: flex-end;
    align-items: center;
}

.article-display-meta-top button {
    padding: 1px 3px;
    margin-left: 10px;
    border-radius: 3px;
    border: 1px solid red;
}

.article-display-meta-top h2:hover {
    border-bottom: 1px solid black;
}

.article-display-meta-top h2{
    display: block;
    box-sizing: border-box;
    border-bottom: 1px solid white;
}

// .article-display-meta-top h2:hover{
//     border-bottom: 1px solid black;
// }

.article-display-meta-bottom {
    margin-left: 8px;
    margin-top: 3px;
    grid-column-start: 2;
    grid-row-start: 2;
    grid-row-end: 3;
}

.article-display-body {
    font-size: 21px;
    margin-top: 30px;
}


.body-text-editor {
    padding: 0 20px 0 50px;
    // max-width: 740px;
    // margin: 0 auto;
    width: 100%;
    font-size: 22px;
    // margin-top: 20px;
    margin-bottom: 75px;
    // overflow: auto;
    // max-height: 67vh;
}

.body-text-editor::placeholder {
    color: lightgray;
    font-size: 40px;
}

.compose-article-outer {
    min-height: calc(100vh - 56px);
    position: relative;
    overflow: hidden;
}

.compose-article-inner {
    max-width: 740px;
    margin: 0 auto;
    position: relative;
    box-sizing: border-box;
}

.display-article-outer {
    min-height: calc(100vh - 56px);
    position: relative;
    overflow: hidden;
}

.display-article-inner {
     max-width: 740px;
    margin: 0 auto;
    position: relative;
    box-sizing: border-box;
}

div.DraftEditor-root {
    position: relative;
    overflow: scroll;
    line-height: 1.5;
}

.link {
    text-decoration: underline;
    cursor: pointer;
    color:rgb(0, 0, 72)
}

.publish-button {
    background: #15bb15;
    color: white;
    height: 30px;
    width: 90px;
    font-size: 14px;
    position: absolute;
    bottom: 10px;
    right: 40px;
    font-weight: 500;
    outline: none;
    border-color: #15bb15;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
}

.image-publish-button {
    background: blue;
    border-color: blue;
    color: white;
    height: 30px;
    width: 90px;
    font-size: 14px;
    position: absolute;
    bottom: 10px;
    right: 140px;
    font-weight: 500;
    outline: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
}

#image-publish-input {
    display: none;
}

.publish-button:hover {
    background: rgb(25, 169, 25)
}

.title-text-editor {
    padding: 0 40px;
    max-width: 680px;
    margin: 0 auto;
    width: 100%;
    font-size: 45px;
    margin-top: 40px;
}

.article-display-like-container {
    max-width: 740px;
    margin: 0 auto;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    box-sizing: border-box;
    margin-bottom: 30px;
}

.article-display-like-container i {
    font-size: 48px;
    cursor: pointer;
}

.article-display-like-container div {
    display: flex;
}

.article-display-like-container span {
    margin-left: 10px;
}

.article-display-like-container button {
    border: 1px solid black;
    padding: 5px;
}

.add-edit-image {
    margin-bottom: 90px;
    margin-left: 20px;
}

.article-image-form {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    background-color: lightgray;
    top: -20px;
    left: -100px;
    width: 1000px;
    height: 550px;
}

.article-image-form button {
    border: 1px solid black;
    padding: 8px;
    margin-left: 20px;
}

.article-edit-link {
    border: 1px solid black;
    padding: 8px;
    height: 50%;
}

.article-title-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.article-display-button-container a {
    margin-right: 20px;
}

